--- a/ENETCareWebForm/ENETCareWebForm.csproj
+++ b/ENETCareWebForm/ENETCareWebForm.csproj
@@ -66,6 +66,7 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="AccountantHomePage.aspx" />
     <Content Include="packages.config" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -78,6 +79,13 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AccountantHomePage.aspx.cs">
+      <DependentUpon>AccountantHomePage.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="AccountantHomePage.aspx.designer.cs">
+      <DependentUpon>AccountantHomePage.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Details.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
