--- a/ENETCareWebForm/ENETCareWebForm.csproj
+++ b/ENETCareWebForm/ENETCareWebForm.csproj
@@ -80,6 +80,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="ProposedInterventionListViewPage.aspx" />
+    <Content Include="SiteEnigeerHomePage.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -119,6 +120,13 @@
     </Compile>
     <Compile Include="ProposedInterventionListViewPage.aspx.designer.cs">
       <DependentUpon>ProposedInterventionListViewPage.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="SiteEnigeerHomePage.aspx.cs">
+      <DependentUpon>SiteEnigeerHomePage.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="SiteEnigeerHomePage.aspx.designer.cs">
+      <DependentUpon>SiteEnigeerHomePage.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
   <PropertyGroup>
