--- a/ENETCareWebForm/Web.config
+++ b/ENETCareWebForm/Web.config
@@ -18,4 +18,8 @@
         warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
     </compilers>
   </system.codedom>
+  <connectionStrings>
+    <add name="ENETCareAppConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\ENETCareDatabase.mdf; Integrated Security=True"
+      providerName="System.Data.SqlClient" />
+  </connectionStrings>
 </configuration>
