--- a/ENETCareWebForm/Web.config
+++ b/ENETCareWebForm/Web.config
@@ -19,9 +19,9 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <!--<add name="ENETCareAppConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\ENETCareDatabase.mdf; Integrated Security=True"
+    <add name="ENETCareAppConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\ENETCareDatabase.mdf; Integrated Security=True"
       providerName="System.Data.SqlClient" />
-      -->
+
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Identity2.mdf;Initial Catalog=Identity;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
