--- a/ENETCareWebForm/ENETCareWebForm.csproj
+++ b/ENETCareWebForm/ENETCareWebForm.csproj
@@ -135,11 +135,13 @@
     </Content>
     <Content Include="ChangePasswordPage.aspx" />
     <Content Include="ClientCreationPage.aspx" />
+    <Content Include="ContactUs.aspx" />
     <Content Include="InterventionCreationPage.aspx" />
     <Content Include="InterventionViewPage.aspx" />
     <Content Include="LoginPage.aspx" />
     <Content Include="ManagerHomePage.aspx" />
     <Content Include="packages.config" />
+    <Content Include="MasterPage.Master" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -150,6 +152,7 @@
   <ItemGroup>
     <Content Include="ProposedInterventionListViewPage.aspx" />
     <Content Include="SiteEngineerHomePage.aspx" />
+    <Content Include="StyleSheet.css" />
     <Content Include="UserListPage.aspx" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
@@ -184,6 +187,13 @@
     <Compile Include="ClientCreationPage.aspx.designer.cs">
       <DependentUpon>ClientCreationPage.aspx</DependentUpon>
     </Compile>
+    <Compile Include="ContactUs.aspx.cs">
+      <DependentUpon>ContactUs.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="ContactUs.aspx.designer.cs">
+      <DependentUpon>ContactUs.aspx</DependentUpon>
+    </Compile>
     <Compile Include="InterventionCreationPage.aspx.cs">
       <DependentUpon>InterventionCreationPage.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -211,6 +221,13 @@
     </Compile>
     <Compile Include="ManagerHomePage.aspx.designer.cs">
       <DependentUpon>ManagerHomePage.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="MasterPage.Master.cs">
+      <DependentUpon>MasterPage.Master</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="MasterPage.Master.designer.cs">
+      <DependentUpon>MasterPage.Master</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ProposedInterventionListViewPage.aspx.cs">
