--- a/ENETCareWebForm/Web.config
+++ b/ENETCareWebForm/Web.config
@@ -21,8 +21,10 @@
   <connectionStrings>
     <add name="ENETCareAppConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\ENETCareDatabase.mdf; Integrated Security=True"
       providerName="System.Data.SqlClient" />
-
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Identity2.mdf;Initial Catalog=Identity;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Identity2.mdf;Initial Catalog=Identity;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
+    <add name="ENETCareDatabaseConnectionString" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\MuhammadFaisal\Source\Repos\.NET_ENETCare_WebFormApp9\ENETCareData\ENETCareDatabase.mdf;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
@@ -34,6 +36,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  
 <system.webServer>
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
@@ -41,7 +44,14 @@
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
+<defaultDocument>
+        <files>
+          <add value="LoginPage.aspx" />
+        </files>
+     </defaultDocument>
+     <directoryBrowse enabled="false" />
   </system.webServer>
+  
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -50,4 +60,5 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+
 </configuration>
