--- a/ENETCareModels/ENETCareModels.csproj
+++ b/ENETCareModels/ENETCareModels.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Client.cs" />
     <Compile Include="ClientWithIntervention.cs" />
     <Compile Include="District.cs" />
+    <Compile Include="Intervention.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="User.cs" />
   </ItemGroup>
