--- a/ENETCareBusinessLogic/ENETCareBusinessLogic.csproj
+++ b/ENETCareBusinessLogic/ENETCareBusinessLogic.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Details.cs" />
     <Compile Include="DistrictManager.cs" />
     <Compile Include="InterventionManager.cs" />
+    <Compile Include="InterventionTypeManager.cs" />
     <Compile Include="LoginValidation.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestDataCalculation.cs" />
