--- a/ENETCareData/ENETCareData.csproj
+++ b/ENETCareData/ENETCareData.csproj
@@ -61,6 +61,7 @@
     <Compile Include="DatabaseConfig.cs" />
     <Compile Include="DistrictGateway.cs" />
     <Compile Include="InterventionGateway.cs" />
+    <Compile Include="InterventionTypeGateway.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserGateway.cs" />
   </ItemGroup>
