--- a/ENETCareModels/ENETCareModels.csproj
+++ b/ENETCareModels/ENETCareModels.csproj
@@ -44,6 +44,7 @@
     <Compile Include="ClientWithIntervention.cs" />
     <Compile Include="District.cs" />
     <Compile Include="Intervention.cs" />
+    <Compile Include="InterventionType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="User.cs" />
   </ItemGroup>
