--- a/ENETCareWebForm/ENETCareWebForm.csproj
+++ b/ENETCareWebForm/ENETCareWebForm.csproj
@@ -274,6 +274,10 @@
       <Project>{58094f66-df6a-4af9-b5a8-a1fc8ed1b02b}</Project>
       <Name>ENETCareBusinessLogic</Name>
     </ProjectReference>
+    <ProjectReference Include="..\ENETCareData\ENETCareData.csproj">
+      <Project>{8F7EFC5F-ACDF-48F1-B842-9A8277EF458B}</Project>
+      <Name>ENETCareData</Name>
+    </ProjectReference>
     <ProjectReference Include="..\ENETCareModels\ENETCareModels.csproj">
       <Project>{bd0ee5a6-ddfc-40d9-997d-65886f83b751}</Project>
       <Name>ENETCareModels</Name>
