--- a/ENETCareWebForm/Web.config
+++ b/ENETCareWebForm/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
@@ -19,9 +19,14 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="ENETCareAppConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\ENETCareDatabase.mdf; Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Identity2.mdf;Initial Catalog=Identity;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="ENETCareDatabaseConnectionString" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\MuhammadFaisal\Source\Repos\.NET_ENETCare_WebFormApp9\ENETCareData\ENETCareDatabase.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="ENETCareAppConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\ENETCareDatabase.mdf; Integrated Security=True"
+      providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Identity2.mdf;Initial Catalog=Identity;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
+    <add name="ENETCareDatabaseConnectionString" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\MuhammadFaisal\Source\Repos\.NET_ENETCare_WebFormApp9\ENETCareData\ENETCareDatabase.mdf;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
+    <add name="ENETCareDatabaseConnectionString2" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\MuhammadFaisal\Source\Repos\.NET_ENETCare_WebFormApp12\ENETCareData\ENETCareDatabase.mdf;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
