--- a/ENETCareModels/ENETCareModels.csproj
+++ b/ENETCareModels/ENETCareModels.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Intervention.cs" />
     <Compile Include="InterventionType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SiteEngineerTotalCost.cs" />
     <Compile Include="User.cs" />
   </ItemGroup>
   <ItemGroup>
