--- a/ENETCareWebForm/ENETCareWebForm.csproj
+++ b/ENETCareWebForm/ENETCareWebForm.csproj
@@ -159,6 +159,7 @@
     <Content Include="SiteEngineerHomePage.aspx" />
     <Content Include="SiteEngineerTotalCostReport.aspx" />
     <Content Include="StyleSheet.css" />
+    <Content Include="TotalLabourCostByDistrictReport.aspx" />
     <Content Include="UserListPage.aspx" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
@@ -279,6 +280,13 @@
       <DependentUpon>SiteEngineerTotalCostReport.aspx</DependentUpon>
     </Compile>
     <Compile Include="Startup.cs" />
+    <Compile Include="TotalLabourCostByDistrictReport.aspx.cs">
+      <DependentUpon>TotalLabourCostByDistrictReport.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="TotalLabourCostByDistrictReport.aspx.designer.cs">
+      <DependentUpon>TotalLabourCostByDistrictReport.aspx</DependentUpon>
+    </Compile>
     <Compile Include="UserListPage.aspx.cs">
       <DependentUpon>UserListPage.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
