--- a/ENETCareWebFormApp.Tests/ENETCareWebForm.Tests.csproj
+++ b/ENETCareWebFormApp.Tests/ENETCareWebForm.Tests.csproj
@@ -11,7 +11,7 @@
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-    <IsCodedUITest>False</IsCodedUITest>
+    <IsCodedUITest>True</IsCodedUITest>
     <TestProjectType>UnitTest</TestProjectType>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -39,17 +39,23 @@
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Web" />
     <Reference Include="System.Web.ApplicationServices" />
     <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Web.Abstractions" />
     <Reference Include="System.Web.Routing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ENETUnitTesting.cs" />
+    <Compile Include="LoginValidationTesting.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SiteEngineer_Can_Creates_Client_And_Intervention.cs" />
+    <Compile Include="When_SiteEngineer_Creates_Intervention.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
