--- a/ENETCareWebForm/ENETCareWebForm.csproj
+++ b/ENETCareWebForm/ENETCareWebForm.csproj
@@ -130,6 +130,7 @@
   <ItemGroup>
     <Content Include="AccountantHomePage.aspx" />
     <Content Include="AllClientsViewPage.aspx" />
+    <Content Include="ApprovedInterventionListViewPage.aspx" />
     <Content Include="App_Data\Identity2.mdf" />
     <Content Include="App_Data\Identity2_log.ldf">
       <DependentUpon>Identity2.mdf</DependentUpon>
@@ -180,6 +181,13 @@
     </Compile>
     <Compile Include="AllClientsViewPage.aspx.designer.cs">
       <DependentUpon>AllClientsViewPage.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="ApprovedInterventionListViewPage.aspx.cs">
+      <DependentUpon>ApprovedInterventionListViewPage.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="ApprovedInterventionListViewPage.aspx.designer.cs">
+      <DependentUpon>ApprovedInterventionListViewPage.aspx</DependentUpon>
     </Compile>
     <Compile Include="ChangeDistrict.aspx.cs">
       <DependentUpon>ChangeDistrict.aspx</DependentUpon>
