Syed-old Intervention edited

--- a/ENETCareWebForm/Web.config
+++ b/ENETCareWebForm/Web.config
@@ -33,8 +33,8 @@
   <connectionStrings>
     <add name="ENETCareAppConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\ENETCareDatabase.mdf; Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Identity2.mdf;Initial Catalog=Identity;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="ENETCareDatabaseConnectionString" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\MuhammadFaisal\Source\Repos\.NET_ENETCare_WebFormApp9\ENETCareData\ENETCareDatabase.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="ENETCareDatabaseConnectionString2" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\MuhammadFaisal\Source\Repos\.NET_ENETCare_WebFormApp12\ENETCareData\ENETCareDatabase.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <!--<add name="ENETCareDatabaseConnectionString" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\MuhammadFaisal\Source\Repos\.NET_ENETCare_WebFormApp9\ENETCareData\ENETCareDatabase.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="ENETCareDatabaseConnectionString2" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\MuhammadFaisal\Source\Repos\.NET_ENETCare_WebFormApp12\ENETCareData\ENETCareDatabase.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
