--- a/ENETCareWebFormApp.Tests/ENETCareWebForm.Tests.csproj
+++ b/ENETCareWebFormApp.Tests/ENETCareWebForm.Tests.csproj
@@ -53,10 +53,13 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ENETUnitTesting.cs" />
-    <Compile Include="LoginValidationTesting.cs" />
+    <Compile Include="AccountantTest.cs" />
+    <Compile Include="InterventionStatusNames.cs" />
+    <Compile Include="ManagerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SiteEngineer_Can_Creates_Client_And_Intervention.cs" />
+    <Compile Include="SiteEngineerTests.cs" />
+    <Compile Include="When_Accountant_Logs_In.cs" />
+    <Compile Include="When_Manager_Logs_In.cs" />
     <Compile Include="When_SiteEngineer_Creates_Intervention.cs" />
   </ItemGroup>
   <ItemGroup>
